clang/test/BSC/Negative/SafeZone/generic_member_function/generic_member_function.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct MyStruct<T> {
  T res;
};

_Safe T struct MyStruct<T>::foo_a(T a) {
  return a;
}

_Safe T struct MyStruct<T>::foo_b(T a) {
  return a;
}

_Safe void struct MyStruct<T>::foo_c(T a) {
  a();                                       // expected-error{{_Unsafe function call is forbidden in the safe zone}}
  _Unsafe {
    a();
  }
}

typedef void (*unsafeFun)(void);

void genericMemberFun() {
  int a = 1;
  int* _Owned p = (int* _Owned)&a;
  int *q = (void*)0;
  int res1 = struct MyStruct<int>::foo_a(12); // OK
  int* _Owned m = struct MyStruct<int* _Owned>::foo_a(p);   // OK 
  int *n = struct MyStruct<int*>::foo_b(q);
  unsafeFun fun_c;
  struct MyStruct<unsafeFun>::foo_c(fun_c);  // expected-note{{in instantiation of member function 'MyStruct<void (*)(void)>::foo_c' requested here}}
}// expected-error {{memory leak of value: `m`}}

_Trait F<T> {
  _Safe int foo(This* _Owned this, T b);
};

_Safe int int::foo(int* _Owned this, int *b) {
  return 0;
} // expected-error {{memory leak of value: `this`}}

_Impl _Trait F<int *> for int;

_Trait G<T> {
  int goo(This* this, T b);
};

int int::goo(int* this, int *b) {  // OK
  return 0;
}

_Impl _Trait G<int *> for int;